<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="60dp">

        <!-- Biography title info -->
        <!-- This is to help with structuring the buttons in the right place, bit finnicky -->
        <!-- this is the box that you can see in the bottom screen of the layout page -->
        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Biography"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#0000FF"
            app:layout_constraintBottom_toTopOf="@id/button_hobbies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="150dp" />


        <!-- adding a button for Hobbies -->
        <!-- TODO: make sure the layout constraints look good-->
        <Button
            android:id="@+id/button_hobbies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_hobbies"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_title" />

        <!-- adding a button for Contact -->
        <!-- TODO: same with other button, fix wrapping and layout structure -->
        <Button
            android:id="@+id/button_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/textview_title" />

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bio_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_contact" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>